Fix bug affecting logo alignment in random projects block
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/projects/trunk@25311 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/module.css
+++ b/module.css
@@ -31,8 +31,7 @@ cached blocks (core bug?). So if you want to alter the block CSS, you'll find it
 /* Used to display project logos, floated to the left */
 .projects_float_left 
 {
-	float:left;
-	margin: 0em 1em 1em 0em;
+	float:left;margin: 0em 1em 1em 0em;
 }
 
 /* Used to prevent projects overlapping logos of others on the index page */
